feat:Added tele to Sarim in HitS